--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>weiligai github welcome u!</h1>
 </head>
 
-<body background="background.jpg">
+<body background="onepiece.jpg">
 
 </body>
 </html>
